# pixel-art-game

./: .editorconfig  .gitattributes  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  aliases.sh  build.sh  get-platform.sh  os-test.sh  pom.xml  run-x64-release.sh
docs/: Platform-Specific Setup.md
javapixelartgame/: .editorconfig  pom.xml
javapixelartgame/src/test/java/net/cometpeakgames/javapixelartgame/: AppTest.java
libraries/glad/: CMakeLists.txt
libraries/glad/include/glad/: gl.h
res/spritesheets/: Terrain Tiles.aseprite
resources/shaders/: Basic.glsl
resources/spritesheets/: Grass Tile.jsonc  Terrain Tiles.aseprite  Terrain Tiles.json
scripts/: build.sh  clean.sh  get-platform-default-config.sh  get-project-name.sh  run-debug.sh  run-release.sh
src/: IndexBuffer.cpp  IndexBuffer.h  OpenGLUtil.cpp  OpenGLUtil.h  Renderer.cpp  Renderer.h  Resources.cpp  Resources.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  main.cpp  platforms.h
src/includes/: GameVersion.in.h
src/main/java/net/cometpeakgames/javapixelartgame/: App.java  Application.java  Game.java  GameAssetDatabase.java
src/main/java/net/cometpeakgames/javapixelartgame/assets/: ExampleClass.java  GameAsset.java  JsonTesting.java
src/main/java/net/cometpeakgames/javapixelartgame/graphics/: Screen.java  Sprite.java  SpriteSheet.java
src/main/java/net/cometpeakgames/javapixelartgame/serialization/: ITextSerializer.java  JsonSerializer.java  SerializationException.java  StandardJsonPrettyPrinter.java
src/main/java/net/cometpeakgames/javapixelartgame/util/: MathUtility.java
src/net/cometpeakgames/javapixelartgame/: Game.java
src/net/cometpeakgames/javapixelartgame/graphics/: Screen.java
src/net/cometpeakgames/javapixelartgame/input/: Keyboard.java
